feat(stock-counts): add create, edit, import, and show pages for stock counts with form handling and validation

--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,15 @@
 {
     "$schema": "https://getcomposer.org/schema.json",
-    "name": "laravel/react-starter-kit",
+    "name": "inmystock/app",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
+    "description": "Sistema de gestão e auditoria de estoque.",
     "keywords": [
         "laravel",
-        "framework"
+        "react",
+        "inertia",
+        "stock",
+        "inventory",
+        "audit"
     ],
     "license": "MIT",
     "require": {
